<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".SignupFragment"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_gdlBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_gdlEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/signup_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup_txtTitle"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/signup_gdlBegin"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_txtUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/signup_gdlEnd"
        app:layout_constraintStart_toEndOf="@id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtTitle"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_txtUsername"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_txtEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signup_gdlEnd"
        app:layout_constraintStart_toEndOf="@id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtUsernameLayout"
        app:startIconDrawable="@drawable/baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_txtPswLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toEndOf="@id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtEmailLayout"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_txtPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_txtConfpswLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toEndOf="@id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtPswLayout"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_txtConfPsw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_txtConfPsw"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btnSignup"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup_btnSignup"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtConfpswLayout" />

    <TextView
        android:id="@+id/signup_txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txtOr"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_btnSignup" />

    <Button
        android:id="@+id/signup_btnLogin"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_btnBackLogin"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/signup_gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/signup_txtOr" />

    <Button
        android:id="@+id/signup_btnGoogle"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login_btnLoginGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/signup_gdlBegin" />

</androidx.constraintlayout.widget.ConstraintLayout>