<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_main">
    <fragment
        android:id="@+id/fragment_main"
        android:name="com.example.welldrink.ui.MainFragment"
        android:label="@string/nav_main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_fragment_main_to_fragment_details"
            app:destination="@id/fragment_details" />
    </fragment>
    <fragment
        android:id="@+id/fragment_research"
        android:name="com.example.welldrink.ui.ResearchFragment"
        android:label="@string/nav_research"
        tools:layout="@layout/fragment_research" >
        <action
            android:id="@+id/action_fragment_research_to_fragment_details"
            app:destination="@id/fragment_details" />
    </fragment>
    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.example.welldrink.ui.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_fragment_profile_to_fragment_details"
            app:destination="@id/fragment_details" />
    </fragment>
    <fragment
        android:id="@+id/fragment_details"
        android:name="com.example.welldrink.ui.DetailsFragment"
        android:label="@string/nav_main"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue="Drink name" />
    </fragment>
</navigation>