<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_gdlStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_gdlEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/details_gdlStart"
        app:layout_constraintStart_toStartOf="@+id/details_gdlEnd"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/details_img"
                android:src="@drawable/ic_baseline_local_drink_128"
                tools:ignore="ImageContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_txtVol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/details_txtVolume"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/details_btnLike"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_baseline_thumb_up_off_alt_24"
                    android:contentDescription="@string/home_btnProfile"
                    android:minWidth="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/details_txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_titleDrink"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textSize="32sp" />

            <View
                android:id="@+id/details_view1"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/md_theme_light_onBackground" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/details_view2"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/md_theme_light_onBackground" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/details_cardPrep"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_prep_txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/details_prep_textTitle"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/details_prep_txtBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/details_prep_txtBody"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textSize="18sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>